# SensingRigs-communicator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
docs/file/: example.json  fileGenerator.py  generated_data.json
include/: FileReader.h  ServiceHandler.h
msg/: MonoIR.msg  Odometry.msg  SensingRigs.msg  StereoIR.msg
src/: FileReader.cpp  ServiceHandler.cpp  client.cpp  json_manager.cpp  service.cpp  test_uwApplication.tr
srv/: DataQuery.srv  Service.srv  service.srv
