<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensingrigs_communicator</name>
  <version>0.0.1</version>
  <description>Used to communicate from the Sensing Rigs to the ground station</description>
  <maintainer email="work@nicolasferraresso.dev">Magform</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Build-time + run-time dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>builtin_interfaces</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Interface package declaration -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
